fix / minor typos, grammar

--- a/web/docs/contributing/docs-guidelines/page.mdx
+++ b/web/docs/contributing/docs-guidelines/page.mdx
@@ -21,7 +21,7 @@ For contributing to the Prompty documentation:
 2. Making Changes
     - Documentation files are located in the `docs` directory.
     - Follow the existing folder structure and naming conventions.
-    - Use `.mdx` extension for all documentation files.
+    - Use the `.mdx` extension for all documentation files.
 
 3. Previewing Changes
     - Start the local development server with `npm run dev` from the `web` directory.
