refactor / move images under "assets/img"

--- a/web/docs/getting-started/first-prompty/page.mdx
+++ b/web/docs/getting-started/first-prompty/page.mdx
@@ -204,6 +204,8 @@ This is where the _Prompty Runtime_ comes in. The runtime converts the Prompty a
 
 *In the next section, we'll explore how to go from Prompty To Code, using the core Python runtime*.
 
+![How do we use prompty?](./../../assets/img/02-build-with-prompty.png)![How do we use prompty?](./../../assets/img/02-build-with-prompty.png)
 
 ---
-[Want to Contribute To the Project?](/docs/contributing/) - _Updated Guidance Coming Soon_.
+[Want to Contribute To the Project?](/docs/contributing/) - _Updated Guidance Coming Soon_.[Want to Contribute To the Project?](/docs/contributing/) - _Updated Guidance Coming Soon_.
+
