--- a/web/docs/getting-started/debugging-prompty/page.mdx
+++ b/web/docs/getting-started/debugging-prompty/page.mdx
@@ -117,12 +117,12 @@ The trace output is divided into three: _load, prepare_ and _run_. Load refers t
 
 > **Note:** it may take a while for the trace output to appear, and you may need to click several runs before seeing the full trace.
 
-![Trace Output](trace-output.png)
+![Trace Output](./../../assets/img/trace-output.png)
 
 
 From the trace output, you can see the inputs, outputs and metrics such as time to execute the prompt and tokens. This information can be used to debug and fix any issues in your code. For example, we can see output has been truncated and the `Completion Tokens` count is less than 1000, which might not be sufficent for the prompt to generate different outputs. We can increase the `max_tokens` in our Prompty to 1000 to generate more tokens. Once done, run the code again and confirm you get 5 examples of the short message inviting friends to a Game Night.
 
-![updated trace output](trace-bug-fixed.png)
+![updated trace output](./../../assets/img/trace-bug-fixed.png)
 
 You can continue experimenting with different parameters such as `temperature` and observe how it affects the model outputs.
 
@@ -131,7 +131,7 @@ You can continue experimenting with different parameters such as `temperature` a
 
 Another way to make the most of observability is in Model Selection. You can switch between models and observe their performance such as completion tokens, latency and accuracy for different tasks. For example, you can switch between the `gpt-4o` and `gpt-35-turbo` models and observe the performance of each model. You can also leverage on GitHub Models, Azure OpenAI and other models to observe the performance of each model. Below is a comparison of the trace output for the `gpt-4o` and `gpt-35-turbo` models:
 
-![grpt-35-turbo output](gpt-35-turbo-trace.png)
+![grpt-35-turbo output](./../../assets/img/gpt-35-turbo-trace.png)
 
 
 From the output, you can see the difference in the completion tokens and the time taken to execute the prompt. This information can be used to select the best model for your use case.
