--- a/web/docs/getting-started/setup/page.mdx
+++ b/web/docs/getting-started/setup/page.mdx
@@ -52,7 +52,7 @@ With this, you see four Prompty-related features in the frame:
 
 In the next section, we'll create our first prompty and make use of the identified features to run it and observe the results.
 
-![VS Code Extension](./prompty-vscode.png)
+![VS Code Extension](./../../assets/img/prompty-vscode.png)
 
 
 
