--- a/web/docs/tutorials/using-langchain/page.mdx
+++ b/web/docs/tutorials/using-langchain/page.mdx
@@ -81,7 +81,7 @@ Let's start with a basic LangChain application example [using Language models](h
     python3 hello_langchain.py
     ```
 
-1. If you had not previously set the ``OPENAI_API_KEY` env variable in that terminal, you will now be prompted to enter it as the "Password" input interactively.
+1. If you had not previously set the `OPENAI_API_KEY` env variable in that terminal, you will now be prompted to enter it as the "Password" input interactively.
 
 On successful run, you should see a valid text response. Here's one sample:
 
