--- a/web/docs/page.mdx
+++ b/web/docs/page.mdx
@@ -1,6 +1,6 @@
 ---
 title: Welcome to Prompty
-description: This is the Prompty documentation landing page. Get an overview of what Prompty is and how it fits into the developer workflow for generative AI applications.
+description: Overview of Prompty and its role in the developer workflow for generative AI applications.
 authors:
   - sethjuarez
   - wayliums
@@ -10,47 +10,46 @@ authors:
 tags:
   - getting-started
   - documentation
-date: 2024-10-02
+date: 2025-14-03
 ---
 
 ## 1. Introduction
 
-[Prompty](https://github.com/microsoft/prompty) is an asset class and format for LLM prompts designed to enhance observability, understandability, and portability for developers. The primary goal is to accelerate the developer inner loop of _prompt engineering_ and _prompt source management_ in a cross-language and cross-platform implementation. 
+[Prompty](https://github.com/microsoft/prompty) is a _asset class_ providing a standardized format for LLM prompts that is designed to enhance observability, understandability, and portability for developers. Its primary goal is to streamline the developer workflow in _prompt engineering_ and _prompt source management_ across various languages and platforms.
 
-The implementation currently supports popular runtimes (Python, C#) and frameworks (LangChain, Semantic Kernel, Prompt flow) with plans to add more. 
-The project is [open source](https://github.com/microsoft/prompty) and we encourage developers to extend the capabilities to new runtimes and tooling _and contribute those back to the core_ for use by the community.
+Prompty currently supports popular runtimes such as Python and C#, and frameworks like [LangChain](docs/tutorials/using-langchain) and [Semantic Kernel](/docs/tutorials/using-semantic-kernel), with more integrations currently under development. Prompty is an [open source](https://github.com/microsoft/prompty) project and we encourage community contributions to extend its usage to new runtimes and frameworks.
 
 _Watch the [**Microsoft Build 2024 Breakout Session**](https://build.microsoft.com/sessions/86e41e8b-1fd2-40fa-a608-6f99a28d4a61?source=sessions)_ for an in-depth introduction. 
-<iframe width="800" height="400" src="https://www.youtube.com/embed/HALMFU7o9Gc" title="BRK114:Practical End-to-End AI Development using Prompty and AI Studio"></iframe>
+<iframe width="800" height="400" src="https://www.youtube.com/embed/HALMFU7o9Gc" title="BRK114: Practical End-to-End AI Development using Prompty and AI Studio"></iframe>
 
 ## 2. Developer Resources
 
-Check back for updates to the documentation site with _tutorials_ (coming soon) and _deep-dives_ (for contributors). In the meantime, here are three more resources to get you started:
+Stay tuned for updates to our documentation site, including _tutorials_ and _deep-dives_ for contributors. Meanwhile, explore these resources to get started:
 
 <details>
 <summary> [**Contoso Creative Writer: Multi-Agent Sample**](https://github.com/Azure-Samples/contoso-creative-writer) - Click for more details </summary>
 
-Contoso Creative Writer is an app that will help you write well researched, product specific articles. Enter the required information and then click "Start Work". To watch the steps in the agent workflow select the debug button in the bottom right corner of the screen. The result will begin writing once the agents complete the tasks to write the article. |  _The solution is built with Prompty and Azure AI Studio_ - [*Workshop Guide*](https://github.com/Azure-Samples/contoso-creative-writer/blob/main/docs/README.md)
+Contoso Creative Writer is an application designed to help you write well-researched, product-specific articles. Enter the required information and click "Start Work". To observe the agent workflow, select the debug button in the bottom right corner. The article will begin writing once the agents complete their tasks. | _Built with Prompty and Azure AI Studio_ - [*Workshop Guide*](https://github.com/Azure-Samples/contoso-creative-writer/blob/main/docs/README.md)
 
 </details>
 
 <details>
 <summary> [**Contoso Chat: Retail RAG Sample**](https://github.com/Azure-Samples/contoso-chat) - Click for more details </summary>
 
-This sample implements a retail copilot solution for Contoso Outdoor that uses a retrieval augmented generation design pattern to ground chatbot responses in the retailer's product and customer data. Customers can now ask questions from the website in natural language, and get relevant responses along with potential recommendations based on their purchase history - with responsible AI practices to ensure response quality and safety. | _The solution is built with Prompty and Azure AI Studio_ - [*Workshop Guide*](https://aka.ms/aitour/contoso-chat/workshop)
+This sample implements a retail copilot solution for Contoso Outdoor, utilizing a retrieval augmented generation design pattern to ground chatbot responses in the retailer's product and customer data. Customers can ask questions in natural language and receive relevant responses and recommendations based on their purchase history, with responsible AI practices ensuring response quality and safety. | _Built with Prompty and Azure AI Studio_ - [*Workshop Guide*](https://aka.ms/aitour/contoso-chat/workshop)
 
 </details>
 
 <details>
 <summary> [**Azure AI Solution Templates**](https://learn.microsoft.com/en-us/collections/5pq0uompdgje8d) - Click for more details </summary>
 
-This is a curated set of Azure AI Templates for use with the Azure Developer CLI, and released initially at Microsoft Build 2024. The collection showcases complete end-to-end solutions for diverse application scenarios, languages, and frameworks - using Prompty and Azure AI Studio. Deploy the solution with one command, then customize it to your needs to learn by experimentation.
+This curated set of Azure AI Templates is designed for use with the Azure Developer CLI, initially released at Microsoft Build 2024. The collection showcases complete end-to-end solutions for diverse application scenarios, languages, and frameworks, using Prompty and Azure AI Studio. Deploy the solution with one command, then customize it to your needs to learn by experimentation.
 
 </details>
 
 ## Next Steps
 
-Start with the **[Getting Started](/docs/getting-started)** section to validate your development setup and build your first Prompty sample.
+Begin with the **[Getting Started](/docs/getting-started)** section to validate your development setup and build your first Prompty sample.
 
 ---
 [Want to Contribute To the Project?](/docs/contributing/) - _Updated Guidance Coming Soon_.
