refactor / WIP-DOCS

--- a/WIP-DOCS/docs/Prompty /Section-01/01.md
+++ b/WIP-DOCS/docs/Prompty /Section-01/01.md
@@ -12,7 +12,7 @@ _In this section, we cover the core building blocks of Prompty (specification, t
 
 The Prompty implementation consists of three core components - the _specification_ (file format), the _tooling_ (developer experience) and the _runtime_ (executable code). Let's review these briefly.
 
-![What is Prompty?](./../img/01-what-is-prompty.png)
+![What is Prompty?](./../assets/img/01-what-is-prompty.png)
 
 
 ### 1.1 The Prompty Specification
@@ -100,7 +100,7 @@ Prompty is ideal for rapid prototyping and iteration of a new generative AI appl
 2. **Develop** by iterating config & content, use tracing to debug
 3. **Evaluate** prompts with AI assistance, saved locally or to cloud
 
-![How do we use prompty?](./../img/02-build-with-prompty.png)
+![How do we use prompty?](./../assets/img/02-build-with-prompty.png)
 
 
 ## 3. Developer Mindset
@@ -112,7 +112,7 @@ Think of it as a **micro-orchestrator focused on a single LLM invocation** putti
  - _engineer_ the prompt (system, user, context, instructions) for that request
  - _shape_ the data used to "render" the template on execution by the runtime
 
-![Where does this fit?](./../img/03-micro-orchestrator-mindset.png)
+![Where does this fit?](./../assets/img/03-micro-orchestrator-mindset.png)
 
 ---
 [Want to Contribute To the Project?](/docs/contributing/) - _Updated Guidance Coming Soon_.
