--- a/WIP-DOCS/docs/Prompty /Section-01/02.md
+++ b/WIP-DOCS/docs/Prompty /Section-01/02.md
@@ -46,7 +46,7 @@ With this, you see four Prompty-related features in the frame:
 
 In the next section, we'll create our first prompty and make use of the identified features to run it and observe the results.
 
-![VS Code Extension](../img/prompty-vscode.png)
+![VS Code Extension](../assets/img/prompty-vscode.png)
 
 
 
